# jack-do

./: Cargo.toml  README.md
docs/: design_abstraction.md  rust_concepts.md  thought_process.md  ts_to_rust_anecdotes.md
docs/architecture/: design_abstraction.md  technical_specs.md  thought_process.md
docs/learning/: rust_concepts.md  ts_to_rust_anecdotes.md  ts_vs_rust_why.md
scripts/: install.ps1  install.sh
src/: cli.rs  main.rs
src/cli/: mod.rs  typescript.rs
src/domains/: typescript.rs
src/typescript/: analyzer.rs  mod.rs  modifier.rs
tests/fixtures/: unused_complex.ts
